#3 allow subject query in get_student_by_id
