# swagger_server/swagger/swagger.yaml
@@ -57,6 +57,11 @@ paths:
         required: true
         type: "integer"
         format: "int64"
+      - name: "subject"
+        in: "query"
+        description: "The subject name"
+        required: false
+        type: "string"
       responses:
         "200":
           description: "successful operation"
